--- a/cities.html
+++ b/cities.html
@@ -26,7 +26,8 @@
     <li>Istanbul (13,854,740)</li>
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
-    <li> Aberdeen (21,789,998)</li>
+    <li>Aberdeen (21,789,998)</li>
+    <li>Dubai (21,789,998)</li>
   </ol>
 
 </body>
