Stewart append commit

--- a/cities.html
+++ b/cities.html
@@ -29,6 +29,7 @@
     <li>Mumbai   (12,478,447)</li>
     <li>Aberdeen (21,789,998)</li>
     <li>Dubai (21,789,998)</li>
+     <li>Dude (2)</li>
   </ol>
 
 </body>
